# pyDCAM

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  sphinx.yml
docs/source/: api.rst  conf.py  example.rst  index.rst  property.rst
examples/: capture_images_with_trigger.py  init_uninit.py  show_properties.py  show_single_captured_image.py  show_single_captured_image_with_subarray.py
pyDCAM/: __init__.py  _util.py  dcamapi.py  dcamapi_enum.py  dcamapi_struct.py  dcamprop.py  enum.py  hamamstu.py
tests/: conftest.py  test_dcamapi.py
